--- a/RandomForestTutorialAon.ipynb
+++ b/RandomForestTutorialAon.ipynb
@@ -15,6 +15,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Code for Understanding Random Forest: A Beginner’s Guide Using Heart Disease Data"
+      ],
+      "metadata": {
+        "id": "tElR-JfjBzTH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Github Repo Link: https://github.com/AonSajjad/Individual-assignment-Machine-Learning-tutorial-2"
+      ],
+      "metadata": {
+        "id": "X8EUbn_iB_B8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -34,7 +52,7 @@
         "id": "5AjOgH5juNtY",
         "outputId": "7f1c4550-cfbb-431b-e638-781680a91829"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +453,7 @@
         "id": "1bDPuCW0uXQV",
         "outputId": "29109cd7-b7e2-4d4b-fadc-58bbca845718"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +487,7 @@
         "id": "Qz7cb0exuZDH",
         "outputId": "e2cfd3bd-2461-4e0e-eea6-af3f3fff8321"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +537,7 @@
         "id": "qnV2By2rubbi",
         "outputId": "941e3c5d-36be-495d-a588-a3ef0ea6e114"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +573,7 @@
       "metadata": {
         "id": "e1JHIKJ-ugXg"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -570,7 +588,7 @@
       "metadata": {
         "id": "jvB0nxngumJX"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +621,7 @@
         "id": "sRLP9Hupuo_a",
         "outputId": "b7d4ef1b-318d-4487-cb77-1d6d8b6181c4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,7 +653,7 @@
         "id": "Tv-5npq1utmX",
         "outputId": "40959fea-29fb-415f-f90f-ccfc16127d1b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +699,7 @@
         "id": "RRX7cJpBu60E",
         "outputId": "c359b58a-4463-4f86-9b7b-66d283774f97"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -721,7 +739,7 @@
         "id": "9Y10wn30urjz",
         "outputId": "f0df59e0-a209-46e1-b168-5d26b231c38c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,7 +769,7 @@
         "id": "ktYKM7HDuxaw",
         "outputId": "46f67060-12c8-4ca6-9327-4116a45c2d8d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +816,7 @@
         "id": "HHzKusuKu2R4",
         "outputId": "76042e24-3d03-43d0-c510-a7a451744858"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -838,7 +856,7 @@
         "id": "QPSXTC_Gve9l",
         "outputId": "e95f33fc-8663-4079-a7a9-2d69a6b1fdcc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -871,7 +889,7 @@
         "id": "wlRM6_-rvkXu",
         "outputId": "30b302d6-98c9-48a0-df0a-933fd7eb5f48"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,7 +937,7 @@
         "id": "qY678vtWwLnS",
         "outputId": "f0d05a7b-bcbe-4210-8b9b-42ded669ac40"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,7 +972,7 @@
         "id": "lpGaZpLqwPzk",
         "outputId": "5e8e8d39-3c50-4ecd-82bc-ba10d29127e0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1002,7 +1020,7 @@
         "id": "q6gZkJ2PwYl1",
         "outputId": "eba8439a-38d9-4ddc-fb09-b50547016c33"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,7 +1057,7 @@
         "id": "cmOCXk7DwaFI",
         "outputId": "d34a16a9-e733-4df7-d30d-3f51f19c5a7d"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1105,7 @@
         "id": "QYJplHsvwuGo",
         "outputId": "26eb8fb7-55c3-46e8-cdab-0e2ab1a43d7b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1117,7 +1135,7 @@
         "id": "hT1Od815w0kQ",
         "outputId": "a7892b5f-2c71-45b3-83c6-fc489950fbda"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,7 +1183,7 @@
         "id": "MuJhlXpHx4tW",
         "outputId": "fe52636d-27a1-400e-b63a-03e7f2f20dc8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1195,7 +1213,7 @@
         "id": "_x8Jc1DCx682",
         "outputId": "6b189be4-5f54-45cd-fdad-7256505a9c0f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1243,7 +1261,7 @@
         "id": "iU9FdaMlx-UQ",
         "outputId": "61329fee-5f99-4fbc-bd0f-8553d327ee24"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1273,7 +1291,7 @@
         "id": "A0yWEgZCyA4U",
         "outputId": "86ab2751-899b-49a3-9fd2-63905a8b7563"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1321,7 +1339,7 @@
         "id": "p2WddBC6yBpT",
         "outputId": "38a50a4b-64f5-4299-c9cc-8e0fffc457ab"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1351,7 +1369,7 @@
         "id": "Rx9xRcKcyCl7",
         "outputId": "13a8f6ab-9d26-4d1f-a31f-7f516acbea7e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1399,7 +1417,7 @@
         "id": "EB4hc1LSx7y0",
         "outputId": "77f66326-479b-4483-80d0-e72d786668f9"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1429,7 +1447,7 @@
         "id": "ZtSX463EyHfw",
         "outputId": "168d866f-1768-462a-b5b5-807955d4e7a3"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1477,7 +1495,7 @@
         "id": "VKs-v15wyIRQ",
         "outputId": "fc660f72-1bb8-4407-a43c-abab768df0a2"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1507,7 +1525,7 @@
         "id": "ULOsByVHyJ8z",
         "outputId": "dfe4aad8-9f0d-40aa-df95-70af7c7df3af"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1580,7 +1598,7 @@
         "id": "nQi1EOkbza0q",
         "outputId": "a561b609-f564-48a6-d7b6-4334eaa37370"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1902,6 +1920,30 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Relevant Article Links:\n",
+        "\n",
+        "- B, U. (2021). Random forest machine learning algorithm. Medium. https://medium.com/@uma.bollikonda/random-forest-machine-learning-algorithm-401bdcd7a0b8 Breiman, L. (2001). Random Forests. Machine Learning, 45(1), 5–32. https://doi.org/10.1023/A:1010950718922\n",
+        "\n",
+        "- Dagğstan, M. E. (2023). Random Forest: The Power of the Forest in Machine Learning. In Medium. Medium. https://medium.com/@dagstaneren/random-forest-f20027466d78\n",
+        "\n",
+        "- Dhiraj, K. (2021). Random Forest Algorithm Advantages and Disadvantages. Medium. https://dhirajkumarblog.medium.com/random-forest-algorithm-advantages-and-disadvantages-1ed22650c84f\n",
+        "- Fleiss, A. (2023). What are the advantages and disadvantages of random forest? Rebellion Research. https://www.rebellionresearch.com/what-are-the-advantages-and-disadvantages-of-random-forest\n",
+        "- Khushaktov, M. F. (2023). Introduction Random Forest Classification By Example. Medium. https://medium.com/@mrmaster907/introduction-random-forest-classification-by-example-6983d95c7b91\n",
+        "- Rakesh. (2023). How Does Random Forest Work? Analytics Vidhya. https://www.analyticsvidhya.com/blog/2023/02/how-does-random-forest-work\n",
+        "- Sharma, M. (2021). Decision Tree Algorithm | Advantages & Disadvantages. K21 Academy. https://k21academy.com/datascience-blog/decision-tree-algorithm/\n",
+        "\n",
+        "\n",
+        "## Dataset Link:\n",
+        "- https://www.kaggle.com/datasets/utkarshx27/heart-disease-diagnosis-dataset\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "q8T6yaj0CICQ"
+      }
     }
   ]
 }
